- fix systems input visibility on home page

--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -140,6 +140,9 @@ body {
         .ldap-login-section {
             display: none;
         }
+        .system-display {
+            display: none;
+        }
     }
     aside{
         .card-block {
